--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,11 +28,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t gastonfernandez78/docker-graphql:0.0.2 .
+        docker build -t gastonfernandez78/docker-graphql:latest .
 
     - name: Docker Push Image
       run: |
         docker push gastonfernandez78/docker-graphql:0.0.2
-    
+        docker push gastonfernandez78/docker-graphql:latest
     
     
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
