--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,21 +18,34 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@4.0.3
+      with:
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        format: "${major}.${minor}.${path}-prerelease${increment}"
+      id: version
+
     - name: Docker Login
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
       run: |        
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD       
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     
     - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        docker build -t gastonfernandez78/docker-graphql:0.0.2 .
+        docker build -t gastonfernandez78/docker-graphql:$NEW_VERSION .
         docker build -t gastonfernandez78/docker-graphql:latest .
 
     - name: Docker Push Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}    
       run: |
-        docker push gastonfernandez78/docker-graphql:0.0.2
+        docker push gastonfernandez78/docker-graphql:$NEW_VERSION
         docker push gastonfernandez78/docker-graphql:latest
     
     
