--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,9 +17,9 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-
+            
     - name: Git Semantic Version
-      uses: PaulHatch/semantic-version@4.0.3
+      uses: PaulHatch/semantic-version@v4.0.3
       with:
         major_pattern: "major:"
         minor_pattern: "feat:"
