--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,8 +22,8 @@ jobs:
       uses: PaulHatch/semantic-version@v4.0.3
       with:
         major_pattern: "major:"
-        minor_pattern: "feat:"
-        format: "${major}.${minor}.${path}-prerelease${increment}"
+        minor_pattern: "feat:"        
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
       id: version
 
     - name: Docker Login
